<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/ll_month_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_8dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/margin_8dp">

            <TextView
                android:id="@+id/tv_bill_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/data_week"
                android:textColor="@color/text_gray_three"
                android:textSize="@dimen/one_eight_sp" />

            <TextView
                android:id="@+id/tv_bill_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/account_money"
                android:textColor="@color/text_gray_three"
                android:textSize="@dimen/one_eight_sp" />


        </RelativeLayout>

        <View style="@style/gray_line"></View>
    </LinearLayout>


    <LinearLayout
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="?listPreferredItemHeight"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_below="@+id/ll_month_count"
        android:layout_centerHorizontal="true">

        <ImageView
            android:id="@+id/img_bill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/chihe2" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_8dp"
            android:layout_toRightOf="@+id/img_account_book"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_bill_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black"
                android:textSize="@dimen/one_eight_sp" />

            <TextView
                android:id="@+id/tv_bill_remark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_5dp"
                android:text="@string/finish"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/text_gray"
                android:textSize="@dimen/one_four_sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_bill_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:gravity="right"
            android:text="10000"
            android:textColor="@color/text_gray" />


    </LinearLayout>

    <View
        android:layerType="software"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/line_dotted" />

</LinearLayout>