<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bill_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <include
            android:id="@+id/background_title"
            layout="@layout/bill_title" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView_Account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"></android.support.v7.widget.RecyclerView>

        <com.mingle.widget.LoadingView
            android:id="@+id/loadView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />


        <View style="@style/gray_line" />

        <LinearLayout
            android:id="@+id/ll_fun"
            android:layout_width="match_parent"
            android:layout_height="@dimen/four_five_dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_edit"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/edit"
                android:textColor="@color/yellow_gray"
                android:textSize="@dimen/one_eight_sp" />

            <View style="@style/gray_line_vertical"></View>

            <TextView
                android:id="@+id/tv_create"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/create"
                android:textColor="@color/yellow_gray"
                android:textSize="@dimen/one_eight_sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_finish"
            android:layout_width="match_parent"
            android:layout_height="@dimen/four_five_dp"
            android:background="@color/white"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/finish"
                android:textColor="@color/yellow_gray"
                android:textSize="@dimen/one_eight_sp" />


        </LinearLayout>


    </LinearLayout>


</LinearLayout>