<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rect_box"
    android:gravity="center_horizontal"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="@dimen/two_zero_dp">

        <TextView
            android:id="@+id/dialog_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/account_category"
            android:textColor="@color/black"
            android:textSize="@dimen/two_zero_dp" />

        <ImageView
            android:id="@+id/img_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_5dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/chahao" />

    </RelativeLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#cecece" />

    <RelativeLayout
        android:id="@+id/re_account_common"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_margin="@dimen/activity_horizontal_margin">

        <ImageView
            android:id="@+id/img_account_book1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/zhangbenicon" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/img_account_book1"
            android:paddingLeft="@dimen/margin_10dp"
            android:text="@string/account"
            android:textColor="@color/yellow_gray"
            android:textSize="@dimen/two_zero_sp" />


    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#cecece" />

    <RelativeLayout
        android:id="@+id/re_account_special"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_margin="@dimen/activity_horizontal_margin">

        <ImageView
            android:id="@+id/img_account_book2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/zhangbenicon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/img_account_book2"
            android:paddingLeft="@dimen/margin_10dp"
            android:text="@string/account_aa"
            android:textColor="@color/yellow_gray"
            android:textSize="@dimen/two_zero_sp" />


    </RelativeLayout>

</LinearLayout>