<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?listPreferredItemHeight"
        android:layout_below="@+id/ll_month_count"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="01月"
            android:textColor="@color/black"
            android:textSize="@dimen/one_eight_sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_8dp"
            android:layout_toRightOf="@+id/img_account_book"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_record_income"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/text_green"
                android:textSize="@dimen/one_eight_sp" />

            <TextView
                android:id="@+id/tv_record_expend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_5dp"
                android:text="@string/finish"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/yellow_gray"
                android:textSize="@dimen/one_four_sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:layout_marginLeft="@dimen/margin_8dp"
            android:layout_toRightOf="@+id/img_account_book"
            android:layout_weight="1"
            android:gravity="right"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_record_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black"
                android:textSize="@dimen/one_eight_sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_5dp"
                android:text="@string/balance"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/text_gray"
                android:textSize="@dimen/one_four_sp" />

        </LinearLayout>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/line_dotted"
        android:layerType="software" />

</LinearLayout>